@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-sources-2.6.32.14 (27 May 2010)
+
+  27 May 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
+  +calculate-sources-2.6.32.14.ebuild:
+  version bump
+
 *calculate-sources-2.6.32.11 (02 Apr 2010)
 
   02 Apr 2010; Alexander Tratsevskiy (L'autre) <at@calculate.ru>
